fix spacing between ul and h<n> tag

--- a/static/css/blog.css
+++ b/static/css/blog.css
@@ -26,7 +26,7 @@ a:hover {
     color: var(--background);
     background: var(--color);
 }
-pre + :is(h2, h3, h4) {
+main :is(pre, ul) + :is(h2, h3, h4) {
     margin-block-start: 2em;
 }
 h2 a,
